# openenv-tabular-cleaning

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: easy_expected.json  easy_input.json  hard_expected.json  hard_input.json  medium_expected.json  medium_input.json
server/: __init__.py  app.py  environment.py
tabular_cleaning_env/: __init__.py  client.py  graders.py  models.py  openenv_compat.py  tasks.py  utils.py
tasks/easy_contacts_cleanup/: ground_truth.csv  metadata.json  raw.csv
tasks/hard_appointments_cleanup/: ground_truth.csv  metadata.json  raw.csv
tasks/medium_orders_cleanup/: ground_truth.csv  metadata.json  raw.csv
tests/: test_docs.py  test_env.py  test_graders.py  test_inference_format.py
